--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,11 @@ packages = [{ include = "s3_utils" }]
 python = ">=3.10,<4.0"
 boto3 = "^1.34"
 botocore = "^1.34"
-typer = "^0.12"
+typer = "^0.12.5"
 PyYAML = "^6.0"
 pandas = "^2.0"
 tqdm = "^4.0"
+click = ">=8.1,<8.2"
 
 [tool.poetry.scripts]
 s3flow = "s3_utils.cli:app"
